--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Scala Documentation"
 description: "Documentation for the Scala programming language- Tutorials, Overviews, Cheatsheets, and more."
-keywords: 
+keywords:
 - Scala
 - Documentation
 - Tutorial
@@ -16,4 +16,4 @@ scala-version: 2.9.1
 pygments: true
 permalink: /:categories/:title.html
 
-#markdown: rdiscount
+markdown: rdiscount
