fix the warning :  Deprecation: The 'pygments' configuration option has been renamed to 'highlighter'. Please update your config file accordingly. The allowed values are 'rouge', 'pygments' or null.

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ keywords:
 
 scala-version: 2.10.0
 
-pygments: true
+highlighter: pygments
 permalink: /:categories/:title.html
 
 # markdown: rdiscount
