update to GitHub Pages 3.0
these changes were made automatically by running
`bundler update github-pages`

fixes #495

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ keywords:
 
 scala-version: 2.10.0
 
-highlighter: pygments
+highlighter: rouge
 permalink: /:categories/:title.html
 baseurl:
 exclude: ["vendor"]
