--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 markdown: kramdown
+kramdown:
+  input: GFM
 
 title: "Scala Documentation"
 description: "Documentation for the Scala programming language - Tutorials, Overviews, Cheatsheets, and more."
@@ -21,4 +23,3 @@ baseurl:
 exclude: ["vendor"]
 gems:
   - jekyll-redirect-from
-
