--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
-sudo: true
+# opt-in to TravisCI's faster container-based infrastructure
+sudo: false
 
 language: ruby
 rvm: 2.0.0
@@ -7,8 +8,10 @@ rvm: 2.0.0
 # will kick in and use `vendor`, ignoring our BUNDLE_PATH
 # declaration in `.bundle/config`
 install:
-- ./scripts/install-coursier.sh
+- curl -L -o coursier https://git.io/vgvpD
 - bundle install
+
+before_script: chmod +x coursier
 
 script:
 - ./scripts/run-tut.sh
