--- a/.drone.yml
+++ b/.drone.yml
@@ -1,10 +1,9 @@
 pipeline:
   build:
-    image: ruby:2.0
+    image: scalaplatform/jdk8-ruby2-coursier:0.1
+    pull: true
     commands:
-      - curl -L -o coursier https://git.io/vgvpD
       - bundle install
-      - chmod +x coursier
       - ./scripts/run-tut.sh
       - rm -r tut-tmp
       - bundle exec jekyll build
