upgrade Jekyll from 3.3.0 to 3.4.3
3.4.3 is what GitHub Pages currently uses, as per
https://pages.github.com/versions/ , so we should use it when
building locally, too

this also fixes a problem I had on OS X where json 1.8.3 failed to
install (see e.g. https://github.com/fastlane/fastlane/issues/7673)

--- a/.drone.yml
+++ b/.drone.yml
@@ -3,6 +3,7 @@ pipeline:
     image: scalaplatform/jdk8-ruby2-coursier:0.1
     pull: true
     commands:
+      - rbenv local 2.4.1
       - bundle install
       - ./scripts/run-tut.sh
       - rm -r tut-tmp
