Fix TOC links in documentation pages
According to https://github.com/jekyll/jekyll/issues/4145#issuecomment-158109424 `:output_ext` needs to be used to make all links generated with `page.url` contain the extension.

Fixes #819

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ keywords:
 scala-version: 2.12.0
 
 highlighter: rouge
-permalink: /:categories/:title.html
+permalink: /:categories/:title.html:output_ext
 baseurl:
 exclude: ["vendor"]
 gems:
