--- a/.drone.yml
+++ b/.drone.yml
@@ -1,8 +1,9 @@
 pipeline:
   build:
-    image: scalacenter/scala-rvm-jvm-coursier:1.0
+    image: scalaplatform/jdk8-ruby2-coursier:0.1
     pull: true
     commands:
+      - source ~/.profile      
       - bundle install
       - ./scripts/run-tut.sh
       - rm -r tut-tmp
