--- a/_data/doc-nav-header.yml
+++ b/_data/doc-nav-header.yml
@@ -6,12 +6,12 @@
     - title: Nightly
       url: https://www.scala-lang.org/files/archive/nightly/2.12.x/api/2.12.x/
     - title: All Versions
-      url: http://google.com
+      url: "/api/all.html"
 - title: Learn
   url: "#!"
   submenu:
     - title: Getting Started
-      url: http://google.com
+      url: "/getting-started.html"
     - title: Tour of Scala
       url: "/tour/tour-of-scala.html"
     - title: Scala for Java Programmers
