Work on SIP landing page

--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,9 @@ collections:
   tutorials:
     output: true
     permalink: /:collection/:path.html
+  sips:
+    output: true
+    permalink: /:collection/:path.html
   books:
     output: false
   ja: # Japanese translations
