--- a/_data/sip-data.yml
+++ b/_data/sip-data.yml
@@ -1,3 +1,15 @@
 under-review:
   color: "#b58900"
   text: "Under Review"
+
+pending:
+  color: "#b58900"
+  text: "Pending"
+
+dormant:
+  color: "#839496"
+  text: "Dormant"
+
+under-revision:
+  color: "#2aa198"
+  text: "Under Revision"
