--- a/_data/compiler-options.yml
+++ b/_data/compiler-options.yml
@@ -846,39 +846,6 @@
     schema:
       type: "Boolean"
     description: "Trace quasiquote-related activities."
-  - option: "-Ypresentation-verbose"
-    schema:
-      type: "Boolean"
-    description: "Print information about presentation compiler tasks."
-  - option: "-Ypresentation-debug"
-    schema:
-      type: "Boolean"
-    description: "Enable debugging output for the presentation compiler."
-  - option: "-Ypresentation-any-thread"
-    schema:
-      type: "Boolean"
-    description: "Allow use of the presentation compiler from any thread"
-  - option: "-Ypresentation-strict"
-    schema:
-      type: "Boolean"
-    description: "Do not report type errors in sources with syntax errors."
-  - option: "-Ypresentation-log"
-    schema:
-      type: "String"
-      arg: "file"
-    description: "Log presentation compiler events into file"
-  - option: "-Ypresentation-replay"
-    schema:
-      type: "String"
-      arg: "file"
-    description: "Replay presentation compiler events from file"
-  - option: "-Ypresentation-delay"
-    schema:
-      type: "Int"
-      default: 0
-      min: 0
-      max: 999
-    description: "Wait number of ms after typing before starting typechecking"
 - category: "Warning Settings"
   description: "This section assembles the `-X` and `-Y` options those influence the printing of warnings."
   options:
@@ -994,3 +961,39 @@
         description: "Enable -Ywarn-unused:imports,privates,locals,implicits."
     description: "Enable or disable specific warnings: `_` for all, `-Xlint:help` to list choices."
     note: "If this options contains `unused`, it enables `-Ywarn-unused:linted`. Otherwise it disables `-Ywarn-unused:linted`."
+- category: "IDE Specific Settings"
+  description: ""
+  options:
+  - option: "-Ypresentation-verbose"
+    schema:
+      type: "Boolean"
+    description: "Print information about presentation compiler tasks."
+  - option: "-Ypresentation-debug"
+    schema:
+      type: "Boolean"
+    description: "Enable debugging output for the presentation compiler."
+  - option: "-Ypresentation-any-thread"
+    schema:
+      type: "Boolean"
+    description: "Allow use of the presentation compiler from any thread"
+  - option: "-Ypresentation-strict"
+    schema:
+      type: "Boolean"
+    description: "Do not report type errors in sources with syntax errors."
+  - option: "-Ypresentation-log"
+    schema:
+      type: "String"
+      arg: "file"
+    description: "Log presentation compiler events into file"
+  - option: "-Ypresentation-replay"
+    schema:
+      type: "String"
+      arg: "file"
+    description: "Replay presentation compiler events from file"
+  - option: "-Ypresentation-delay"
+    schema:
+      type: "Int"
+      default: 0
+      min: 0
+      max: 999
+    description: "Wait number of ms after typing before starting typechecking"
