Add a link to the 'learn.html' page to the navigation header

--- a/_data/doc-nav-header.yml
+++ b/_data/doc-nav-header.yml
@@ -16,6 +16,8 @@
       url: "/tour/tour-of-scala.html"
     - title: Scala for Java Programmers
       url: "/tutorials/scala-for-java-programmers.html"
+    - title: Online Resources
+      url: "/learn.html"
 - title: Reference
   url: "#"
   submenu:
