Added collections graphviz dot files and rendered svg's

--- a/resources/images/tour/Makefile
+++ b/resources/images/tour/Makefile
@@ -1,4 +1,18 @@
+all: unified-types\
+     type-casting\
+     collections\
+     collections-immutable\
+     collections-mutable\
+     collections-legend
 unified-types:
-	dot -Tsvg unified-types-diagram.dot -o unified-types-diagram.svg
+	dot -Tsvg $@-diagram.dot -o $@-diagram.svg
 type-casting:
-	dot -Tsvg type-casting-diagram.dot -o type-casting-diagram.svg
+	dot -Tsvg $@-diagram.dot -o $@-diagram.svg
+collections:
+	dot -Tsvg $@-diagram.dot -o $@-diagram.svg
+collections-immutable:
+	dot -Tsvg $@-diagram.dot -o $@-diagram.svg
+collections-mutable:
+	dot -Tsvg $@-diagram.dot -o $@-diagram.svg
+collections-legend:
+	dot -Tsvg $@-diagram.dot -o $@-diagram.svg
