Update “Scala 2.13’s Collections” guide.
- Remove documentation of deprecated or removed collections
  (Traversable, immutable.Stack, LinkedList, DoubleLinkedList,
  synchronized sets and maps), operations (toStream, copyToBuffer, hasDefiniteSize, addition and removal
  operations on root collections, union, reverseMap, prefixLength) and generic package
- Update documentation of collections that have been replaced
  by other collections (Stream, WrappedArray, HashMap, HashSet,
  ArrayStack, View), or renamed operations (retain, transform)
- Add documentation for new collections (immutable.ArraySeq,
  VectorMap, ArrayDeque) and new operations (unfold, toLazyList,
  knownSize, distinct, distinctBy, groupMap, groupMapReduce, xxxInPlace,
  sizeCompare, sizeIs, minOption, maxOption)
- Harmonize code style
    - don’t use infix syntax with operations taking more than one param
    - show alphabetic name of operations before showing their symbolic
      alias
- Remove “Migrating from 2.7” page

--- a/resources/images/tour/Makefile
+++ b/resources/images/tour/Makefile
@@ -10,9 +10,12 @@ type-casting:
 	dot -Tsvg $@-diagram.dot -o $@-diagram.svg
 collections:
 	dot -Tsvg $@-diagram.dot -o $@-diagram.svg
+	dot -Tsvg $@-diagram-213.dot -o $@-diagram-213.svg
 collections-immutable:
 	dot -Tsvg $@-diagram.dot -o $@-diagram.svg
+	dot -Tsvg $@-diagram-213.dot -o $@-diagram-213.svg
 collections-mutable:
 	dot -Tsvg $@-diagram.dot -o $@-diagram.svg
+	dot -Tsvg $@-diagram-213.dot -o $@-diagram-213.svg
 collections-legend:
 	dot -Tsvg $@-diagram.dot -o $@-diagram.svg
