Add missing link, fixes #1262

--- a/_data/overviews.yml
+++ b/_data/overviews.yml
@@ -17,6 +17,7 @@
         - title: Trait Iterable
           url: "collections/trait-iterable.html"
         - title: The sequence traits Seq, IndexedSeq, and LinearSeq
+          url: "collections/seqs.html"
         - title: Concrete Immutable Collection Classes
           url: "collections/concrete-immutable-collection-classes.html"
         - title: Concrete Mutable Collection Classes
