--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ keywords:
 - Document
 - Guide
 
-scala-version: 2.12.8
-scala-213-version: 2.13.0-M5
+scala-version: 2.13.0
+scala-212-version: 2.12.8
 
 collections:
   style:
